Add Windows build script
Use CMake to build on Windows. There are NMAKE files as well, but some
of the build scripts for them are missing. So stick with CMake.

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -18,7 +18,9 @@ build:
 
 requirements:
   build:
-    - python  # [win]
+    - python      # [win]
+    - cmake       # [win]
+    - msinttypes  # [win]
 
 test:
   requires:
