--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -10,7 +10,11 @@ source:
   sha256: 91bfb25e050ce3c301483204dd3f0d03a7c05472e20d48fe227a383d4534e7c9
 
 build:
-  number: 1000
+  number: 1001
+  run_exports:
+    # https://abi-laboratory.pro/index.php?view=timeline&l=oniguruma 
+    - {{ pin_subpackage('oniguruma', max_pin='x.x') }}
+
 
 requirements:
   build:
