--- a/.azure-pipelines/azure-pipelines-win.yml
+++ b/.azure-pipelines/azure-pipelines-win.yml
@@ -6,11 +6,8 @@ jobs:
   strategy:
     maxParallel: 4
     matrix:
-      win_c_compilervs2008:
-        CONFIG: win_c_compilervs2008
-        CONDA_BLD_PATH: D:\\bld\\
-      win_c_compilervs2015:
-        CONFIG: win_c_compilervs2015
+      win_c_compilervs2015vc14:
+        CONFIG: win_c_compilervs2015vc14
         CONDA_BLD_PATH: D:\\bld\\
   steps:
     # TODO: Fast finish on azure pipelines?
