Require `make` as a `build` dependency

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -27,6 +27,7 @@ requirements:
   build:
     - {{ compiler("c") }}
     - cmake                # [win]
+    - make
   host:
     - msinttypes           # [win]
 
